--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+blinker==1.8.2
+click==8.1.7
 dnspython==2.6.1
+Flask==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
 ldap3==2.9.1
+MarkupSafe==2.1.5
 ping3==4.0.8
 pyasn1==0.6.0
+Werkzeug==3.0.4
